@@ -1,3 +1,12 @@
+2020-07-05  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
+	compose-window: Attachments of type "message/external-body" must
+	have a filename, because libbalsa_message_create_mime_message()
+	uses it to distinguish access-type=URL from
+	access-type=local-file.
+
+	* src/sendmsg-window.c (attachment2message):
+
 2020-07-04  Peter Bloomfield  <pbloomfield@bellsouth.net>
 
 	compose-window: Handle attachments of type
